--- a/volumes/lembrador-contas/src/views/email/emailList.ejs
+++ b/volumes/lembrador-contas/src/views/email/emailList.ejs
@@ -27,6 +27,7 @@
                                     </td>
                                     <td><a href='/emails/edit/<%= email._id %>'>Editar</a>
                                         <a href='/emails/remove/<%= email._id %>'>Excluir</a>
+                                        <a href='/emails/test/<%= email._id %>'>Testar</a>
                                     </td>
                                 </tr>
                                 <%})%>
