--- a/volumes/lembrador-contas/src/views/bill/billList.ejs
+++ b/volumes/lembrador-contas/src/views/bill/billList.ejs
@@ -4,43 +4,50 @@
         <%- template.navbar %>
             <div class="container">
                 <div class="starter-template">
-                    <h1 class="title-1">
-                        <%= title %>
-                    </h1>
-                    <br>
-                    <table class="table">
-                        <thead>
-                            <tr>
-                                <th>Empresa</th>
-                                <th>Fonte Valor</th>
-                                <th>Dia Vencimento</th>
-                                <th>Situação</th>
-                                <th>Ações</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <% billList.forEach(function(bill){ %>
+                    <div class="float-right">
+                        <form class="form-inline my-2 my-lg-0">
+                            <a href='/bills/new' class="btn btn-outline-success my-2 my-sm-0">Novo</a>
+                        </form>
+                    </div>
+                    <div>
+                        <h1 class="title-1">
+                            <%= title %>
+                        </h1>
+                        <br>
+                        <table class="table">
+                            <thead>
                                 <tr>
-                                    <td>
-                                        <%= bill.company %>
-                                    </td>
-                                    <td>
-                                        <%= bill.valueSourceType %>
-                                    </td>
-                                    <td>
-                                        <%= bill.dueDay %>
-                                    </td>
-                                    <td>
-                                        <%= bill.status %>
-                                    </td>
-                                    <td>
-                                        <a href='/bills/edit/<%= bill._id %>'>Editar</a>
-                                        <a href='/bills/remove/<%= bill._id %>'>Excluir</a>
-                                    </td>
+                                    <th>Empresa</th>
+                                    <th>Fonte Valor</th>
+                                    <th>Dia Vencimento</th>
+                                    <th>Situação</th>
+                                    <th>Ações</th>
                                 </tr>
-                                <%})%>
-                        </tbody>
-                    </table>
+                            </thead>
+                            <tbody>
+                                <% billList.forEach(function(bill){ %>
+                                    <tr>
+                                        <td>
+                                            <%= bill.company %>
+                                        </td>
+                                        <td>
+                                            <%= bill.valueSourceType %>
+                                        </td>
+                                        <td>
+                                            <%= bill.dueDay %>
+                                        </td>
+                                        <td>
+                                            <%= bill.status %>
+                                        </td>
+                                        <td>
+                                            <a href='/bills/edit/<%= bill._id %>'>Editar</a>
+                                            <a href='/bills/remove/<%= bill._id %>'>Excluir</a>
+                                        </td>
+                                    </tr>
+                                    <%})%>
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
             </div>
             <%- template.scripts %>
