--- a/volumes/lembrador-contas/src/views/email/emailList.ejs
+++ b/volumes/lembrador-contas/src/views/email/emailList.ejs
@@ -4,35 +4,42 @@
         <%- template.navbar %>
             <div class="container">
                 <div class="starter-template">
-                    <h1 class="title-1">
-                        <%= title %>
-                    </h1>
-                    <br>
-                    <table class="table">
-                        <thead>
-                            <tr>
-                                <th>Remetente</th>
-                                <th>Situação</th>
-                                <th>Ações</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <% emailList.forEach(function(email){ %>
+                    <div class="float-right">
+                        <form class="form-inline my-2 my-lg-0">
+                            <a href='/emails/new' class="btn btn-outline-success my-2 my-sm-0">Novo</a>
+                        </form>
+                    </div>
+                    <div>
+                        <h1 class="title-1">
+                            <%= title %>
+                        </h1>
+                        <br>
+                        <table class="table">
+                            <thead>
                                 <tr>
-                                    <td>
-                                        <%= email.address %>
-                                    </td>
-                                    <td>
-                                        <%= email.status %>
-                                    </td>
-                                    <td><a href='/emails/edit/<%= email._id %>'>Editar</a>
-                                        <a href='/emails/remove/<%= email._id %>'>Excluir</a>
-                                        <a href='/emails/test/<%= email._id %>'>Testar</a>
-                                    </td>
+                                    <th>Remetente</th>
+                                    <th>Situação</th>
+                                    <th>Ações</th>
                                 </tr>
-                                <%})%>
-                        </tbody>
-                    </table>
+                            </thead>
+                            <tbody>
+                                <% emailList.forEach(function(email){ %>
+                                    <tr>
+                                        <td>
+                                            <%= email.address %>
+                                        </td>
+                                        <td>
+                                            <%= email.status %>
+                                        </td>
+                                        <td><a href='/emails/edit/<%= email._id %>'>Editar</a>
+                                            <a href='/emails/remove/<%= email._id %>'>Excluir</a>
+                                            <a href='/emails/test/<%= email._id %>'>Testar</a>
+                                        </td>
+                                    </tr>
+                                    <%})%>
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
             </div>
             <%- template.scripts %>
