--- a/volumes/lembrador-contas/src/views/templates/navbar.html
+++ b/volumes/lembrador-contas/src/views/templates/navbar.html
@@ -12,36 +12,22 @@
             <a class="dropdown-item" href="/users/list">Listar</a>
             <a class="dropdown-item" href="/users/new">Cadastrar</a>
         </div>
-    </li>
-    <li class="nav-item dropdown">
-      <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Tabelas</a>
-      <div class="dropdown-menu" aria-labelledby="dropdown01">
-        <a class="dropdown-item" href="/tables/list">Listar</a>
-        <a class="dropdown-item" href="/tables/new">Cadastrar</a>
-      </div>
-    </li>
-    <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="dropdown03" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Emails</a>
-            <div class="dropdown-menu" aria-labelledby="dropdown01">
-                <a class="dropdown-item" href="/emails/list">Listar</a>
-                <a class="dropdown-item" href="/emails/new">Cadastrar</a>
-                <a class="dropdown-item" href="/emails/test">Testar</a>
-            </div>
-    </li>
-    <li class="nav-item dropdown">
+      </li>
+      <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="dropdown02" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Contas</a>
         <div class="dropdown-menu" aria-labelledby="dropdown01">
             <a class="dropdown-item" href="/bills/list">Listar</a>
             <a class="dropdown-item" href="/bills/new">Cadastrar</a>
         </div>
-    </li>
-    <li class="nav-item dropdown">
-      <a class="nav-link dropdown-toggle" href="#" id="dropdown02" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">APIs</a>
-      <div class="dropdown-menu" aria-labelledby="dropdown01">
-          <a class="dropdown-item" href="/apis/list">Listar</a>
-          <a class="dropdown-item" href="/apis/new">Cadastrar</a>
-      </div>
-  </li>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Fontes de Dados</a>
+        <div class="dropdown-menu" aria-labelledby="dropdown01">
+          <a class="dropdown-item" href="/tables/list">Tabelas</a>
+          <a class="dropdown-item" href="/emails/list">Emails</a>
+          <a class="dropdown-item" href="/apis/list">APIs</a>
+        </div>
+      </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="text" placeholder="Buscar" aria-label="Buscar">
