--- a/volumes/lembrador-contas/src/views/user/userList.ejs
+++ b/volumes/lembrador-contas/src/views/user/userList.ejs
@@ -4,39 +4,46 @@
         <%- template.navbar %>
             <div class="container">
                 <div class="starter-template">
-                    <h1 class="title-1">
-                        <%= title %>
-                    </h1>
-                    <br>
-                    <table class="table">
-                        <thead>
-                            <tr>
-                                <th>Nome</th>
-                                <th>Email</th>
-                                <th>Situação</th>
-                                <th>Ações</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <% userList.forEach(function(user){ %>
+                    <div class="float-right">
+                        <form class="form-inline my-2 my-lg-0">
+                            <a href='/users/new' class="btn btn-outline-success my-2 my-sm-0">Novo</a>
+                        </form>
+                    </div>
+                    <div>
+                        <h1 class="title-1">
+                            <%= title %>
+                        </h1>
+                        <br>
+                        <table class="table">
+                            <thead>
                                 <tr>
-                                    <td>
-                                        <%= user.name %>
-                                    </td>
-                                    <td style="word-break: break-word;">
-                                        <%= user.email %>
-                                    </td>
-                                    <td>
-                                        <%= user.status %>
-                                    </td>
-                                    <td>
-                                        <a href='/users/edit/<%= user._id %>'>Editar</a>
-                                        <a href='/users/remove/<%= user._id %>'>Excluir</a>
-                                    </td>
+                                    <th>Nome</th>
+                                    <th>Email</th>
+                                    <th>Situação</th>
+                                    <th>Ações</th>
                                 </tr>
-                                <%})%>
-                        </tbody>
-                    </table>
+                            </thead>
+                            <tbody>
+                                <% userList.forEach(function(user){ %>
+                                    <tr>
+                                        <td>
+                                            <%= user.name %>
+                                        </td>
+                                        <td style="word-break: break-word;">
+                                            <%= user.email %>
+                                        </td>
+                                        <td>
+                                            <%= user.status %>
+                                        </td>
+                                        <td>
+                                            <a href='/users/edit/<%= user._id %>'>Editar</a>
+                                            <a href='/users/remove/<%= user._id %>'>Excluir</a>
+                                        </td>
+                                    </tr>
+                                    <%})%>
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
             </div>
             <%- template.scripts %>
