--- a/volumes/lembrador-contas/src/views/table/tableList.ejs
+++ b/volumes/lembrador-contas/src/views/table/tableList.ejs
@@ -29,7 +29,7 @@
                                             <%= table.name %>
                                         </td>
                                         <td>
-                                            <%= table.status %>
+                                            <%= statusEnum[table.status] %>
                                         </td>
                                         <td>
                                             <a href='/tables/edit/<%= table._id %>'>Editar</a>
