--- a/volumes/lembrador-contas/src/views/bill/newBill.ejs
+++ b/volumes/lembrador-contas/src/views/bill/newBill.ejs
@@ -11,8 +11,13 @@
                         <br>
                         <form action="/bills/add" method="post">
                             <div class="form-group">
+                                <label for="name">Nome</label>
+                                <input type="text" class="form-control" id="name" name="name" placeholder="Nome"
+                                    aria-describedby="basic-addon1" required>
+                            </div>
+                            <div class="form-group">
                                 <label for="company">Empresa</label>
-                                <input type="text" class="form-control" id="company" name="company" placeholder="Nome"
+                                <input type="text" class="form-control" id="company" name="company" placeholder="Empresa"
                                     aria-describedby="basic-addon1" required>
                             </div>
                             <br>
