--- a/volumes/lembrador-contas/src/views/templates/navbar.html
+++ b/volumes/lembrador-contas/src/views/templates/navbar.html
@@ -30,8 +30,7 @@
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="text" placeholder="Buscar" aria-label="Buscar">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
+      <a href="/dashboard/processBills" class="btn btn-outline-success my-2 my-sm-0">Processar contas</a>
     </form>
   </div>
 </nav>
