--- a/volumes/lembrador-contas/src/views/api/editApi.ejs
+++ b/volumes/lembrador-contas/src/views/api/editApi.ejs
@@ -59,6 +59,7 @@
                         <br>
                         <div class="form-group-btn">
                             <input type="submit" class="btn btn-primary center-block" value="Salvar" />
+                            <a href="/apis/list" class="btn btn-secondary center-block">Cancelar</a>
                         </div>
                     </form>
                 </div>
