--- a/volumes/lembrador-contas/src/views/table/editTable.ejs
+++ b/volumes/lembrador-contas/src/views/table/editTable.ejs
@@ -46,6 +46,7 @@
                                 <br>
                                 <div class="form-group-btn">
                                     <input type="submit" class="btn btn-primary center-block" value="Salvar" />
+                                    <a href="/tables/list" class="btn btn-secondary center-block">Cancelar</a>
                                 </div>
                     </form>
                 </div>
