--- a/volumes/lembrador-contas/src/views/bill/newBill.ejs
+++ b/volumes/lembrador-contas/src/views/bill/newBill.ejs
@@ -54,6 +54,7 @@
                             <br>
                             <div class="form-group">
                                 <input type="submit" class="btn btn-primary center-block" value="Salvar" />
+                                <a href="/bills/list" class="btn btn-secondary center-block">Cancelar</a>
                             </div>
                         </form>
                     </div>
