--- a/volumes/lembrador-contas/src/views/user/editUser.ejs
+++ b/volumes/lembrador-contas/src/views/user/editUser.ejs
@@ -31,6 +31,7 @@
                         <br>
                         <div class="form-group-btn">
                             <input type="submit" class="btn btn-primary center-block" value="Salvar" />
+                            <a href="/users/list" class="btn btn-secondary center-block">Cancelar</a>
                         </div>
                     </form>
                 </div>
